actualizacion del componente de ruido ff  

--- a/dashboard/src/main/resources/application.properties
+++ b/dashboard/src/main/resources/application.properties
@@ -8,17 +8,27 @@
 #spring.rmcab.datasource.password=jceron
 
 #Descomentar estas lineas para produccion
+
 spring.rmcab.datasource.jdbcUrl=jdbc:postgresql://192.168.175.14:5432/cimab
 spring.rmcab.datasource.username=postgres
 spring.rmcab.datasource.password=c3n__r0m0d3lami3nt0
+spring.rmcab.datasource.driver-class-name=org.postgresql.Driver
+spring.rmcab.datasource.initialization-mode=never
+#  actualizarlo  #  spring.rmcab.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/ruido
+#  actualizarlo  #  spring.rmcab.datasource.username=postgres
+#  actualizarlo  #  spring.rmcab.datasource.password=Vinokurov01&
+#  actualizarlo  #  spring.rmcab.datasource.driver-class-name=org.postgresql.Driver
+#  actualizarlo  #  spring.rmcab.datasource.initialization-mode=never
+
 
 #Sensores de bajo costo
 spring.sbc.datasource.jdbcUrl=jdbc:postgresql://192.168.175.47:5432/sbc_db
 spring.sbc.datasource.username=sbc_user
 spring.sbc.datasource.password=sbc_password
 
-spring.rmcab.datasource.driver-class-name=org.postgresql.Driver
-spring.rmcab.datasource.initialization-mode=never
+
+
+
 #spring.rmcab.datasource.platform=postgresql
 
 spring.sbc.datasource.driver-class-name=org.postgresql.Driver
@@ -44,6 +54,15 @@ spring.ruido.datasource.username=postgis_test
 spring.ruido.datasource.password=
 spring.ruido.datasource.driver-class-name=org.postgresql.Driver
 spring.ruido.datasource.initialization-mode=never
+
+# de ruido # spring.ruido.datasource.jdbcUrl=jdbc:postgresql://localhost:5432/ruido
+# de ruido # spring.ruido.datasource.username=postgres
+# de ruido # spring.ruido.datasource.password=Vinokurov01&
+# de ruido # spring.ruido.datasource.driver-class-name=org.postgresql.Driver
+# de ruido # spring.ruido.datasource.initialization-mode=never
+
+
+
 ##spring.ruido.datasource.platform=org.hibernate.spatial.dialect.postgis.PostgisDialect
 ##spring.ruido.jpa.database-platform=org.hibernate.spatial.dialect.postgis.PostgisDialect
 #spring.ruido.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
