--- a/dashboard/src/main/resources/application.properties
+++ b/dashboard/src/main/resources/application.properties
@@ -76,6 +76,41 @@ spring.etiquetado.datasource.driver-class-name=org.postgresql.Driver
 spring.etiquetado.datasource.initialization-mode=never
 ##spring.etiquetado.datasource.platform=postgresql
 
+
+#spring.orfeo.datasource.jdbc-url=jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=172.16.2.74)(PORT=1521))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=orfeo.idu.gov.co)))
+
+#spring.etiqoracle.datasource.jdbc-url=jdbc:oracle:thin:@(DESCRIPTION=(ADDRESS=(PROTOCOL=TCP)(HOST=172.22.1.24)(PORT=1521))(CONNECT_DATA=(SERVER=DEDICATED)(SERVICE_NAME=sia)))
+spring.etiqoracle.datasource.username=etiquetado
+spring.etiqoracle.datasource.password=newuser2023
+spring.etiqoracle.datasource.driverClassName=oracle.jdbc.OracleDriver
+spring.etiqoracle.datasource.initialization-mode=never
+oracle.jdbc.timezoneAsRegion=false
+
+#datasource.url=jdbc:mysql://localhost:3307/
+#                         datasource.url=jdbc:oracle:thin//localhost:3307/
+#                         jdbc:oracle:thin:@localhost:61521/service_name
+# https://stackoverflow.com/questions/62837731/connect-to-db-using-ssh-java
+spring.etiqoracle.datasource.jdbc-url=jdbc:oracle:thin:@//localhost:61521/sia
+#spring.etiqoracle.datasource.jdbc-url=jdbc:oracle:thin:@//172.22.1.24:1521/sia
+#spring.etiqoracle.datasource.username=etiquetado
+#spring.etiqoracle.datasource.password=newuser2023
+#spring.etiqoracle.datasource.driverClassName=oracle.jdbc.OracleDriver
+#spring.etiqoracle.datasource.initialization-mode=never
+
+spring.rmcaboracle.datasource.jdbc-url=jdbc:oracle:thin:@//localhost:61522/sia
+spring.rmcaboracle.datasource.username=consulta
+spring.rmcaboracle.datasource.password=consulta_sia21
+spring.rmcaboracle.datasource.driverClassName=oracle.jdbc.OracleDriver
+
+
+
+
+#spring.reing.datasource.jdbc-url=jdbc:oracle:thin:@//iducluster04-scan.idu.gov.co:1735/gesdoc.idu.gov.co
+#spring.reing.datasource.username=OW_CONECTAPRD
+#spring.reing.datasource.password=2ii_y3hZZPIXJ
+#spring.reing.datasource.driverClassName=oracle.jdbc.OracleDriver
+
+
 spring.jpa.database-platform=org.hibernate.spatial.dialect.postgis.PostgisDialect
 spring.jpa.hibernate.ddl-auto=auto
 ##spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.postgis.PostgisDialect
@@ -113,3 +148,13 @@ server.compression.min-response-size=64
 # spring.ldap.embedded.base-dn=dc=springframework,dc=org
 # spring.ldap.embedded.port=8389
 # spring.ldap.embedded.url=ldap://localhost:8389/
+
+sda.etiquetado.xsl.file=C:/trabajo/sda/etiquetado/vehicular/xsl/etiquetado.xsl
+sda.etiquetado.xslHolog.file=C:/trabajo/sda/etiquetado/vehicular/xsl/holograma.xsl
+sda.etiquetado.xml.directory=C:/trabajo/sda/etiquetado/vehicular/xml/
+sda.etiquetado.xml.dirHolograma=C:/trabajo/sda/etiquetado/vehicular/xml/holograma/
+sda.etiquetado.chart.directory=C:/trabajo/sda/etiquetado/vehicular/chart/
+sda.etiquetado.pdf.directory=C:/trabajo/secretariaMedioAmbiente/secretaria_medio_ambiente/frontAngular14_ruido/ruido/src/assets/pdf/
+sda.etiquetado.pathAssets.directory=./assets/pdf/
+
+server.port=8082 
